--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
+monitor_speed = 115200
 lib_deps =
     FastLED
+    ESP Async WebServer
